--- a/RandomVectors/main.tex
+++ b/RandomVectors/main.tex
@@ -73,12 +73,12 @@ Consider a triangle with vertices:
 \begin{table}[!ht]
 	\section{vectors}
 	\centering
-	\input{./tables/Q1.1.tex}
+	\input{tables/Q1.1.tex}
 	\caption{Vectors}
 	\label{table:vectors}
 \end{table}
 \begin{figure}
-\includegraphics[width=\columnwidth]{./figs/Q1.1.3.png}
+\includegraphics[width=\columnwidth]{figs/Q1.1.3.png}
 \caption{VECTORS}
 \label{fig:vectors}
 \end{figure}
@@ -86,48 +86,48 @@ Consider a triangle with vertices:
 \begin{table}[!ht]
 	\section{median}
 	\centering
-	\input{./tables/Q1.2.tex}
+	\input{tables/Q1.2.tex}
 	\caption{Median}
 	\label{table:median}
 \end{table}
 \begin{figure}
-\includegraphics[width=\columnwidth]{./figs/Q1.2.2.png}
+\includegraphics[width=\columnwidth]{figs/Q1.2.2.png}
 \caption{MEDIAN}
 \label{fig:median}
 \end{figure}
 \begin{table}[!ht]
 	\section{altitude}
 	\centering
-	\input{./tables/Q1.3.tex}
+	\input{tables/Q1.3.tex}
 	\caption{Altitude}
 	\label{table:Altitude}
 \end{table}
 \begin{figure}
-\includegraphics[width=\columnwidth]{./figs/Q1.3.4.png}
+\includegraphics[width=\columnwidth]{figs/Q1.3.4.png}
 \caption{ALTITUDE}
 \label{fig:altitude}
 \end{figure}
 \begin{table}[!ht]
 	\section{perpendicular bisector}
 	\centering
-	\input{./tables/Q1.4.tex}
+	\input{tables/Q1.4.tex}
 	\caption{Perpendicular Bisector}
 	\label{table:Perpendicular Bisector}
 \end{table}
 \begin{figure}
-\includegraphics[width=\columnwidth]{./figs/Q1.4.1.png}
+\includegraphics[width=\columnwidth]{figs/Q1.4.1.png}
 \caption{PERPENDICULAR BISECTOR}
 \label{fig:perpendicular bisector}
 \end{figure}
 \begin{table}[!ht]
 	\section{angle bisector}
 	\centering
-	\input{./tables/Q1.5.tex}
+	\input{tables/Q1.5.tex}
 	\caption{Angle Bisector}
 	\label{table:Angle Bisector}
 \end{table}
 \begin{figure}
-\includegraphics[width=\columnwidth]{./figs/Q1.5.1.png}
+\includegraphics[width=\columnwidth]{figs/Q1.5.1.png}
 \caption{ANGLE BISECTOR}
 \label{fig:angle bisector}
 \end{figure}
