--- a/RandomVectors/gvv.sty
+++ b/RandomVectors/gvv.sty
@@ -93,7 +93,7 @@ columns=fullflexible
 %\let\StandardTheFigure\thefigure
 \let\vec\mathbf
 
-\NewDocumentCommand{\system}{gg}{%
+\NewDocumentCommand{\system}{oo}{%
   \IfNoValueTF{#1}
     {%
  \longleftrightarrow
